--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://Yokkazuki.github.io/TestApp",
+  "homepage": "https://Yokkazuki.github.io/TestApp",
   "name": "test",
   "version": "0.1.1",
   "private": true,
